--- a/templates/TEMPLATE-fr.html
+++ b/templates/TEMPLATE-fr.html
@@ -5,18 +5,18 @@
   <title>Ghosty's Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="style/light-theme.css">
+  <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
   <a href="http://thefrenchghosty.xyz">Accueil</a>
-  <div class="theme">
-    <a href="TEMPLATE-fr-dark.html">Thème Sombre</a>
+  <div class="version">
+    <a href="TEMPLATE-en.html">English Version</a>
   </div>
   <h1 class='title'>TITRE</h1>
 CONTENU
   <div class="footer">
-    <p><a href="support-fr.html">Soutenez le Développement</a></p>
+    <p><a href="about-fr.html">Soutenez le Développement</a></p>
   </div>
 </body>
 
