--- a/templates/TEMPLATE-en.html
+++ b/templates/TEMPLATE-en.html
@@ -5,18 +5,18 @@
   <title>Ghosty's Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="style/light-theme.css">
+  <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
   <a href="http://thefrenchghosty.xyz">Home</a>
-  <div class="theme">
-    <a href="TEMPLATE-en-dark.html">Dark Theme</a>
+  <div class="version">
+    <a href="TEMPLATE-fr.html">Version Française</a>
   </div>
   <h1 class='title'>TITLE</h1>
 CONTENT
   <div class="footer">
-    <p><a href="support-en.html">Support the Development</a></p>
+    <p><a href="about-en.html">About</a></p>
   </div>
 </body>
 
